# spielraum

./: .gitignore  .pkg  CMakeLists.txt  README.md
cl/test/: main.cc
lib/geom_reader/src/: geom_reader.cc
lib/ifc_utl/include/ifc_utl/: queries.h
lib/ifc_utl/src/: queries.cc
test/geom_reader/: queries-test.cc
test_resources/: test.html  test_style.css
ui/: dpi.manifest
ui-resources/html/: web.html
ui-resources/js/: script.js
ui/spielraum/include/spielraum/ui/: spielraum_app.h  web_viewer_frame.h
ui/spielraum/src/: spielraum_app.cc  web_viewer_frame.cc
ui/svg-viewport/include/svg-viewport/ui/: main_frame.h  viewport_app.h
ui/svg-viewport/src/: main_frame.cc  viewport_app.cc
